3082
Code gets refused in Scala 2.9.0.r24145-b20110130020134:

{code}
scala> "" match { case List(x @ _*) => x }
<console>:6: error: scrutinee is incompatible with pattern type;
 found   : List[A]
 required: java.lang.String
       "" match { case List(x @ _*) => x }
                           ^
{code}

It looks like this is the right behaviour.
